Updated All (mobile not responsive yet)

--- a/index.html
+++ b/index.html
@@ -92,21 +92,16 @@
             <p>toggle the theme to dark and light mode</p>
          </div>
          <input type="checkbox" class="cb" id="theme">
-         <div class="text-holder">
-            <h1>Blue Color</h1>
-            <p>toggle the predominant color to blue</p>
-         </div>
-         <input type="checkbox" class="cb" id="blue">
       </section>
       <div class="list-container">
          <section class="container">
             <h3>ADD TO LIST</h3>
             <input class="text-adder" type="item-name" placeholder="Today i Will...">
          </section>
-         <button class="add-list-item">ADD ITEM</button>
+         <button class="action-button">ADD ITEM</button>
       </div>
    </main>
-   <script src="main.js"></script>
+   <script src="main.js" defer></script>
 </body>
 
 </html>
