--- a/about.html
+++ b/about.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="aboutme.css">
    <title>About Me</title>
 </head>
+
+
 <body>
    <main>
       <section class="about">
          <h1>Sobre Mim</h1>
          <p>Apenas um Teste</p>
       </section>
-      <button><a href="index.html">BACK</a></button>
+      <a href="index.html">
+         <button class="action-button">
+            BACK
+         </button>
+      </a>
    </main>
+   <script src="main.js" defer></script>
 </body>
+
 </html>
