List Functions Added (Mobile Not Supported Yet)

--- a/index.html
+++ b/index.html
@@ -19,63 +19,16 @@
       <ul>
          <li class="logo">
             <h3>Dober To Do List</h3>
-         </li>
+         </li
          <li class="list-button">
-            <button class="drop-button">
-               <span class="material-icons">checklist</span>
-               <p>My Lists</p>
-               <span class="material-icons arrows">keyboard_arrow_down</span>
-            </button>
-            <ul class="sub-itens">
-               <li class="item">
-                  <a href="#">New List
-                  </a>
-               </li>
-               <li class="item">
-
-                  <a href="#">List 1
-                  </a>
-               </li>
-               <li class="item">
-
-                  <a href="#">List 2
-                  </a>
-               </li>
-            </ul>
-         </li>
-         <li class="list-button">
-            <button class="drop-button">
-               <span class="material-icons">check_box</span>
-               <p>Completed</p>
-               <span class="material-icons arrows">keyboard_arrow_down</span>
-            </button>
-            <ul class="sub-itens">
-               <li class="item">
-                  <a href="#">
-                     List 1
-                  </a>
-               </li>
-               <li class="item">
-                  <a href="#">
-                     List 2
-                  </a>
-               </li>
-               <li class="item">
-                  <a href="#">
-                     List 3
-                  </a>
-               </li>
-            </ul>
-         </li>
-         <li class="list-button">
-            <button class="no-arrow-button">
+            <button class="button">
                <span class="material-icons">settings</span>
                <p>Settings</p>
             </button>
          </li>
          <li class="list-button">
             <a href="about.html">
-               <button class="no-arrow-button">
+               <button class="button">
                   <span class="material-icons">more</span>
                   <p>About Me</p>
                </button>
@@ -94,14 +47,17 @@
          <input type="checkbox" class="cb" id="theme">
       </section>
       <div class="list-container">
+         <h3>TASKS</h3>
+         <div class="task-holder">
+         </div>
          <section class="container">
             <h3>ADD TO LIST</h3>
             <input class="text-adder" type="item-name" placeholder="Today i Will...">
+            <input type="button" value="ADD ITEM" class="add-item  action-button">
          </section>
-         <button class="action-button">ADD ITEM</button>
-      </div>
+         </div>
    </main>
-   <script src="main.js" defer></script>
+   <script type="text/javascript" src="main.js" defer></script>
 </body>
 
 </html>
