Mobile Responsive Beta 1 Releases

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
    <main>
       <section class="about">
          <h1>Sobre Mim</h1>
-         <p>Apenas um Teste</p>
+         <p>Olá, sou Daniel, um programador iniciante em busca de melhorar, nessa caminhada já fiz sites incriveis, tanto ano passado (deletados) quanto desde quanto voltei a programar, busco o frontend mas quanto terminar vou fazer o backend, ainda estou treinando javascript mas vou treinar python e os frameworks de JS</p>
       </section>
       <a href="index.html">
          <button class="action-button">
