--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
 <body>
    <nav class="sidebar">
-      <ul>
-         <li class="logo">
-            <h3>Dober To Do List</h3>
-         </li
+      <h3 class="logo">Dober To Do List</h3>
+      <span class="material-icons open-menu">menu</span>
+      <ul class="side-content">
          <li class="list-button">
             <button class="button">
                <span class="material-icons">settings</span>
